--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@
 
 .header-section {
   background-color: var(--navy-blue-color);
-  max-width: 1440px;
+  min-width: 390px;
 }
 
 .order-service-button {
@@ -237,7 +237,6 @@
 .port-button-list {
   justify-content: center;
   gap: 24px;
-  /* margin-bottom: 72px; */
 }
 .port-btn {
   /* padding: 12px 24px; */
@@ -254,9 +253,7 @@
   column-gap: 24px;
   row-gap: 48px;
 }
-.li-lists {
-  width: calc((100% - 48px) / 3);
-}
+
 .div-app-interface {
   /* padding: 32px 16px; */
   border: 1px solid #e7e9fc;
@@ -772,8 +769,8 @@
   padding: 10px 15px 20px;
 }
 .advantages-sub-title {
-  font-weight: 700;
-  font-size: 36px;
+  font-weight: 500;
+  font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--navy-blue-color);
@@ -873,8 +870,7 @@
   .container {
     min-width: 1158px;
     margin: 0 auto;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding: 0 120px 72px;
   }
   .adress {
     /*ok*/
@@ -909,6 +905,9 @@
     border-bottom: 1px solid #e7e9fc;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
       0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  }
+  .header-section {
+    min-width: 1440px;
   }
   .studio-style {
     /*ok*/
@@ -981,7 +980,8 @@
   }
 
   .nav-menu {
-    display: flex; /*ok*/
+    display: flex;
+    padding-left: 0;
     gap: 40px;
   }
   .mobile-screen {
@@ -1089,13 +1089,11 @@
   .header-div {
     display: flex;
     justify-content: space-between;
+    padding: 0 156px;
   }
   .advantages-sub-title {
     font-weight: 500;
     font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: var(--navy-blue-color);
   }
   .paragraf {
     font-size: 16px;
@@ -1165,6 +1163,17 @@
   .social-media-mobile-style {
     align-items: start;
   }
+  .li-lists {
+    width: calc((100% - 48px) / 3);
+  }
+  .port-button-list {
+    padding-top: 100px;
+    padding-bottom: 72px;
+    margin: 0 auto;
+  }
+  .mobile-style {
+    min-width: 264px;
+  }
 }
 @media screen and (min-width: 768px) and (max-width: 1157px) {
   .s-section-li {
@@ -1208,6 +1217,9 @@
   .container {
     max-width: 768px;
   }
+  .header-section {
+    min-width: 1150px;
+  }
 
   .social-media-team {
     margin-top: 8px;
@@ -1221,22 +1233,35 @@
     gap: 120px;
     display: inline-flex;
     align-items: baseline;
-    width: 768px;
-    height: 456px;
+    min-width: 768px;
+    /* height: 456px; */
     flex-wrap: wrap;
     column-gap: 24px;
     justify-content: center;
+    flex-direction: row;
+  }
+  .footer-subscribe-paragraph {
+    text-align: start;
+    padding-left: 130px;
   }
   .footer-email-container {
     display: inline-flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 768px;
+    min-width: 453px;
   }
   .footer-form {
     display: flex;
     gap: 24px;
-    justify-content: center;
+    justify-content: start;
+    padding-left: 130px;
+  }
+
+  .footer-form-label {
+    min-width: 264px;
+  }
+  .fotter-subscribtion-button {
+    margin-left: 0;
   }
   .header-title {
     color: var(--white-color);
@@ -1256,13 +1281,8 @@
     height: 436px;
   }
   .advantages-sub-title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: var(--navy-blue-color);
-    font-style: normal;
-    font-family: "Roboto";
+    font-weight: 500;
+    font-size: 20px;
   }
   .paragraf {
     font-size: 16px;
@@ -1285,5 +1305,8 @@
   }
   .modal-window {
     width: 408px;
+  }
+  .li-lists {
+    width: calc((100% - 24px) / 2);
   }
 }
