--- a/css/style.css
+++ b/css/style.css
@@ -644,7 +644,6 @@
   gap: 24px;
 }
 .customers-section {
-  /* padding-top: 120px;*/
   padding-bottom: 96px;
 }
 .customers-icons {
@@ -1033,6 +1032,7 @@
   .customers-section {
     padding-top: 120px;
     padding-bottom: 120px;
+    max-height: 200px;
   }
   .customers-list {
     gap: 24px;
@@ -1073,6 +1073,8 @@
   }
   .customers-position {
     align-items: center;
+    justify-content: center;
+    max-height: 100%;
   }
   .js-open-menu {
     display: none;
