--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,15 @@
   list-style: none;
   display: none;
 }
+.adress-mobile-menu {
+  font-family: "Roboto";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.32px;
+  list-style: none;
+}
 
 .header-section {
   background-color: var(--navy-blue-color);
@@ -107,15 +116,11 @@
 .paragraph-port-cards:focus {
   transform: translateY(0%);
 }
-.section-five-title {
-  /*   margin-bottom: 72px;*/
-}
 
 .footer-span {
   color: #f4f4fd;
 }
 
-/* pagina portfolio*/
 .portfolio-button {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -219,16 +224,11 @@
 }
 .footer-logo {
   display: inline-block;
-  /* margin-bottom: 16px; */
 }
 .footer-p-position {
   max-width: 264px;
-  /* margin-bottom: 16px; */
 }
-.main-class {
-  /* padding-top: 96px;
-  padding-bottom: 120px;*/
-}
+
 .port-button-list {
   justify-content: center;
   gap: 24px;
@@ -264,9 +264,6 @@
   color: var(--navy-blue-color);
   font-style: normal;
   font-family: "Roboto";
-}
-.bbb {
-  /* margin-left: 0; */
 }
 
 .ul-potf {
@@ -338,6 +335,11 @@
 
 .list-disc {
   list-style: none;
+}
+.mobile-menu-items {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
 }
 
 .social-media-design {
@@ -869,13 +871,115 @@
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
   height: 70px;
   min-width: 320px;
+  position: relative;
 }
 .container {
   /* min-width: 320px; */
   margin: 0 auto;
   padding: 0 15px;
 }
+.menu-toggle {
+  min-height: 40px;
+  min-width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+}
+.hamburger {
+  min-width: 320px;
+  max-width: 1170px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.menu-container .menu-toggle {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  color: #fff;
+}
+.menu-container.is-open {
+  transform: translateX(0);
+}
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 32px;
+  background-color: var(--white-color);
+  z-index: 999;
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.mobile-menu-link {
+  color: var(--navy-blue-color);
+  font-family: Roboto;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 40px; /* 111.111% */
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
+}
+.mobile-menu-link:hover,
+.mobile-menu-link:focus {
+  color: var(--ocean-color);
+}
+.adress-color {
+  /*ok*/
+  color: var(--slate-color);
+}
+.mobile-phone-color {
+  color: var(--IRIS, #4d5ae5);
+  /* Header 2 */
+  font-family: Roboto;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 40px; /* 111.111% */
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
+}
+.mobile-adress-list {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  gap: 40px;
+  margin-top: 150px;
+}
+.mobile-mail {
+  color: var(--slate-color);
+  font-family: Roboto;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px; /* 120% */
+  letter-spacing: 0.4px;
+}
+.social-media-team-mobile {
+  display: flex;
+  align-items: center;
+  gap: 56px;
+  justify-content: center;
+}
 
+.burger-svg {
+  position: absolute;
+  right: 0;
+}
 @media screen and (min-width: 1158px) {
   .container {
     width: 1158px;
@@ -913,13 +1017,11 @@
   }
 
   .studio-style {
-    /*ok*/
     position: relative;
     color: var(--navy-blue-color);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .studio-style::after {
-    /*ok*/
     content: "";
     position: absolute;
     left: 0;
@@ -931,37 +1033,31 @@
     visibility: hidden;
   }
   .studio-style:focus::after {
-    /*ok*/
     visibility: visible;
   }
   .studio-style:hover::after {
-    /*ok*/
     visibility: visible;
   }
   .studio-link {
-    /*ok*/
     padding-top: 24px;
     padding-bottom: 24px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .nav-elements {
-    /*ok*/
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--navy-blue-color);
   }
-  .nav-elements:hover, /*ok*/
-.nav-elements:focus {
+  .nav-elements:hover,
+  .nav-elements:focus {
     color: #404bbf;
   }
   .nav-link:focus {
-    /*ok*/
     color: #404bbf;
   }
   .section-two {
-    /*ok*/
     width: 264px;
     height: 112px;
     flex-shrink: 0;
@@ -1016,9 +1112,7 @@
   .all-img {
     width: 100%;
   }
-  .section-iii-img {
-    /*flex-basis: calc((100% - 48px) / 3);*/
-  }
+
   .social-media-team {
     margin-top: 8px;
     padding: 0;
@@ -1061,6 +1155,7 @@
     color: var(--white-color);
     text-align: center;
     line-height: 1.07;
+
     width: 60%;
     margin-bottom: 0;
   }
@@ -1076,7 +1171,7 @@
     justify-content: center;
     max-height: 100%;
   }
-  .js-open-menu {
+  .hamburger {
     display: none;
   }
   .media-links-portfolio {
@@ -1227,7 +1322,7 @@
     flex-direction: column;
     gap: 12px;
   }
-  .js-open-menu {
+  .hamburger {
     display: none;
   }
   .section-iii {
